--- a/pruebaPlanilla23/appsettings.json
+++ b/pruebaPlanilla23/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Conn": "Data Source=JC39012\\SQLEXPRESS;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
