Se creo y modifico la vistas de Delete de tipo de horario junto con su funcion

--- a/pruebaPlanilla23/appsettings.json
+++ b/pruebaPlanilla23/appsettings.json
@@ -8,6 +8,11 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "Conn": "Data Source=JC39012\\SQLEXPRESS;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+        "Conn": "Data Source=;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
     }
+
+    /* Cadena de JOEL
+    "ConnectionStrings": {
+        "Conn": "Data Source=HP_JOEL\\SQLEXPRESS;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    }*/
 }
