Agregue en comentario mi cadena de conexion en el archivo appsetting.json

--- a/pruebaPlanilla23/appsettings.json
+++ b/pruebaPlanilla23/appsettings.json
@@ -1,18 +1,23 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-
-    "ConnectionStrings": {
-        "Conn": "Data Source=;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
 
-    /* Cadena de JOEL
+  "ConnectionStrings": {
+    "Conn": "Data Source=;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+  }
+
+  /* Cadena de JOEL
     "ConnectionStrings": {
         "Conn": "Data Source=HP_JOEL\\SQLEXPRESS;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    }*/
+
+  /* Cadena de ROCIO
+    "ConnectionStrings": {
+        "Conn": "Data Source=DESKTOP-9MUILCC;Initial Catalog=PlanillaPrDB;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
     }*/
 }
